--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,4 +56,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.github.100mslive:android-sdk:2.2.0'
 }
