--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,18 @@ dependencies:
   hmssdk_flutter: ^0.4.0
   uuid:
   http:
-
+  wakelock: ^0.5.6
+  visibility_detector: ^0.2.0
+  provider: ^5.0.0-nullsafety.1
+  flutter_staggered_grid_view:
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
+  mobx_codegen: ^2.0.1+3
+#  permission_handler: ^8.3.0
+  intl:
+  should_rebuild: 1.0.1
+  flutter_launcher_icons: ^0.9.1
+  input_history_text_field: ^0.1.0
 
 dev_dependencies:
   flutter_test:
