--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   mobx_codegen: ^2.0.1+3
-#  permission_handler: ^8.3.0
+  permission_handler: ^8.3.0
   intl:
   should_rebuild: 1.0.1
   flutter_launcher_icons: ^0.9.1
