--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  hmssdk_flutter: ^0.4.0
+  hmssdk_flutter: 0.4.0
   uuid:
   http:
   wakelock: ^0.5.6
